<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Group invite switch-->
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/em_pref_key_accept_group_invite_automatically"
        android:summary="@string/em_pref_group_invites_summary"
        android:title="@string/em_pref_group_invites"/>
    <!--Adaptive video bitrate-->
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/em_pref_key_adaptive_video_bitrate"
        android:title="@string/em_pref_adaptive_video_bitrate"
        app:isPreferenceVisible="false"/>
    <!--Blocked Users-->
    <Preference
        android:title="@string/em_pref_blocked_users">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="io.agora.chatdemo.settings.BlackListActivity"
            android:targetPackage="io.agora.chatdemo"/>
    </Preference>

</PreferenceScreen>