<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
      android:id="@+id/menu_voice_call"
      android:icon="@drawable/em_ic_action_voice_call"
      android:title="@string/chat_voice_call"
      app:showAsAction="always"
      />
  <item
      android:id="@+id/menu_video_call"
      android:icon="@drawable/em_ic_action_video_call"
      android:title="@string/chat_video_call"
      app:showAsAction="always"
      />

  <item
      android:id="@+id/menu_expand_more"
      android:icon="@drawable/em_ic_action_expand_more"
      android:title="@string/chat_expand_more"
      app:showAsAction="always"
      >
    <menu>
      <item
          android:id="@+id/menu_take_photo"
          android:title="Take photo"
          />
      <item
          android:id="@+id/menu_gallery"
          android:title="Gallery"
          />
      <item
          android:id="@+id/menu_location"
          android:title="Location"
          />
      <item
          android:id="@+id/menu_file"
          android:title="File"
          />
    </menu>
  </item>
  <item
      android:id="@+id/menu_group_detail"
      android:title="detail"
      android:icon="@android:drawable/ic_menu_info_details"
      app:showAsAction="always"
      android:visible="false"/>
</menu>