<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ml_layout_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:padding="@dimen/activity_padding"
    tools:context=".sign.SignInActivity"
    >

    <!--Include communal Toolbar-->
    <!--<include layout="@layout/em_widget_toolbar_communal"/>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            >

            <LinearLayout
                android:id="@+id/layout_sign_in_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/logo_margin"
                    android:src="@drawable/em_logo_green"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/em_hint_sign_in"
                    android:textColor="@color/sign_text_white"
                    android:textSize="16sp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/sign_text_white"
                    android:textColorHint="@color/sign_text_hint"
                    >

                    <EditText
                        android:id="@+id/edt_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/em_hint_account"
                        android:inputType="textImeMultiLine"
                        android:textColor="@color/sign_text_white"
                        android:textColorHint="@color/sign_text_hint"
                        android:textSize="16sp"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/sign_text_white"
                    android:textColorHint="@color/sign_text_hint"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white_background"
                    >

                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/em_hint_password"
                        android:inputType="textPassword"
                        android:textColor="@color/sign_text_white"
                        android:textColorHint="@color/sign_text_hint"
                        android:textSize="16sp"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_height_small"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/em_btn_rectangle_green"
                    android:text="@string/em_sign_in"
                    android:textColor="@color/sign_text_white"
                    android:textSize="14sp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/em_hint_dont_have_account"
                        android:textColor="@color/sign_text_hint"
                        android:textSize="14sp"
                        />

                    <Button
                        android:id="@+id/btn_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@string/em_sign_up"
                        android:textColor="@color/sign_text_white"
                        android:textSize="14sp"
                        />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>