<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar_actionbar"
      app:navigationIcon="@drawable/em_ic_back"
      app:title="@string/em_new_group"
      style="@style/ToolbarNormalTheme"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="70dp"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      android:paddingLeft="16dp"
      >
    <ImageView
        android:id="@+id/img_new_group_avatar"
        android:layout_width="@dimen/group_item_avatar_size"
        android:layout_height="@dimen/group_item_avatar_size"
        android:src="@drawable/ease_ic_group_default"
        />

    <EditText
        android:id="@+id/edit_new_group_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/group_name_margin_left"
        android:textColor="#8798a4"
        android:textSize="16sp"
        />
  </LinearLayout>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="@dimen/base_line_height"
      android:background="@color/base_line_color"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      android:paddingLeft="16dp"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Members:"
        />
    <TextView
        android:id="@+id/text_new_group_members_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#8798a4"
        android:textSize="14sp"
        />
  </LinearLayout>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recycler_new_group_members"
      android:layout_width="match_parent"
      android:layout_height="80dp"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="10dp"
      android:background="@color/base_line_color"
      />

  <RelativeLayout
      android:id="@+id/layout_appear_in_group_search"
      android:layout_width="match_parent"
      android:layout_height="56dp"
      android:background="?android:attr/selectableItemBackground"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:text="@string/em_appear_in_group_search"
        android:textColor="#212121"
        android:textSize="16sp"
        />
    <Switch
        android:id="@+id/switch_appear_in_group_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="18.5dp"
        />
  </RelativeLayout>
  <RelativeLayout
      android:id="@+id/layout_allow_members_to_invite"
      android:layout_width="match_parent"
      android:layout_height="56dp"
      android:background="?android:attr/selectableItemBackground"
      >
    <TextView
        android:id="@+id/text_allow_member_to_invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:text="@string/em_allow"
        android:textColor="#212121"
        android:textSize="16sp"
        />
    <Switch
        android:id="@+id/switch_allow_members_to_invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="18.5dp"
        />
  </RelativeLayout>
</LinearLayout>